--- a/Infrastructure/NlayeredApp.Infrastructure/NlayeredApp.Infrastructure.csproj
+++ b/Infrastructure/NlayeredApp.Infrastructure/NlayeredApp.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\NlayeredApp.Application\NlayeredApp.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SmsLogger\" />
+  </ItemGroup>
+
 </Project>
