--- a/Presentation/NlayeredApp.API/appsettings.json
+++ b/Presentation/NlayeredApp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=BYNDR28;Database=NlayeredApp;User Id=dw;Password=Perkon123456;"
+  }
 }
