--- a/Core/NlayeredApp.Application/NlayeredApp.Application.csproj
+++ b/Core/NlayeredApp.Application/NlayeredApp.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NlayeredApp.Domain\NlayeredApp.Domain.csproj" />
   </ItemGroup>
 
