--- a/Presentation/NlayeredApp.API/appsettings.json
+++ b/Presentation/NlayeredApp.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=BYNDR28;Database=NlayeredApp;User Id=dw;Password=Perkon123456;"
+    "SqlServer": "Server=BYNDR28;Database=App;User Id=dw;Password=Perkon123456;"
   }
 }
