--- a/Infrastructure/NlayeredApp.Persistence/NlayeredApp.Persistence.csproj
+++ b/Infrastructure/NlayeredApp.Persistence/NlayeredApp.Persistence.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="SmsLogger\" />
   </ItemGroup>
 
 </Project>
